--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <title>Run Buddy</title>
+    <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
   <body>
     <!-- navigation -->
     <header>
-        <h1>
-          <a href="/">RUN BUDDY</a>
-        </h1>
+        <h1>RUN BUDDY</h1>
         <nav>
           <ul>
             <li>
